--- a/Hosee/Hosee/Base.lproj/Main.storyboard
+++ b/Hosee/Hosee/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="845-7l-hOp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="845-7l-hOp">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -30,8 +30,8 @@
                                     <action selector="toggle:" destination="4YE-B2-OJr" eventType="touchUpInside" id="Skp-5r-ZS7"/>
                                 </connections>
                             </button>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iix-lU-fgo" userLabel="LeftSlideMenu">
-                                <rect key="frame" x="0.0" y="0.0" width="310.5" height="896"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Iix-lU-fgo" userLabel="LeftSlideMenu">
+                                <rect key="frame" x="40" y="0.0" width="310.5" height="896"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
                                         <color key="value" cocoaTouchSystemColor="darkTextColor"/>
@@ -73,9 +73,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="Unp-aK-7wB"/>
                     <connections>
+                        <outlet property="controlConstraint" destination="1bm-kn-YWa" id="9cO-BP-pzC"/>
                         <outlet property="corverButton" destination="8hp-oP-xB2" id="iJ5-hH-gzD"/>
-                        <outlet property="leftContraint" destination="1bm-kn-YWa" id="SfO-ni-SlI"/>
-                        <outlet property="leftSlideMenu" destination="Iix-lU-fgo" id="7hg-dC-P7u"/>
+                        <outlet property="menu" destination="Iix-lU-fgo" id="107-MX-ydT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3dv-ej-auJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
