--- a/Hosee/Hosee/Base.lproj/Home.storyboard
+++ b/Hosee/Hosee/Base.lproj/Home.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2aA-2i-l8A">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2aA-2i-l8A">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -308,13 +308,13 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sLl-eS-mzV" userLabel="SelectedView" customClass="View" customModule="Hosee" customModuleProvider="target">
-                            <rect key="frame" x="40" y="20" width="297" height="121"/>
+                            <rect key="frame" x="40" y="20" width="297" height="180"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="6ul-yg-GTs">
-                                    <rect key="frame" x="32" y="0.0" width="233" height="121"/>
+                                    <rect key="frame" x="32" y="16" width="233" height="148"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fLb-i6-obP" customClass="Button" customModule="Hosee" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="233" height="35"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="233" height="44"/>
                                             <inset key="titleEdgeInsets" minX="-8" minY="0.0" maxX="0.0" maxY="0.0"/>
                                             <inset key="imageEdgeInsets" minX="-63" minY="-6" maxX="0.0" maxY="0.0"/>
                                             <state key="normal" title="SỬA CHỮA CAMERA" image="Camera">
@@ -331,7 +331,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66H-Ok-tnE" customClass="Button" customModule="Hosee" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="43" width="233" height="35"/>
+                                            <rect key="frame" x="0.0" y="52" width="233" height="44"/>
                                             <inset key="titleEdgeInsets" minX="0.0" minY="-8" maxX="0.0" maxY="0.0"/>
                                             <inset key="imageEdgeInsets" minX="-55" minY="-12" maxX="0.0" maxY="0.0"/>
                                             <state key="normal" title="SỬA CHỮA ĐIỀU HOÀ" image="Air Cool">
@@ -348,7 +348,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PCd-sx-ZuI" customClass="Button" customModule="Hosee" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="86" width="233" height="35"/>
+                                            <rect key="frame" x="0.0" y="104" width="233" height="44"/>
                                             <inset key="titleEdgeInsets" minX="4" minY="-7" maxX="0.0" maxY="0.0"/>
                                             <inset key="imageEdgeInsets" minX="-43" minY="0.0" maxX="0.0" maxY="7"/>
                                             <state key="normal" title="SỬA CHỮA ĐÈN ĐIỆN" image="Light">
@@ -366,9 +366,10 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
+                                <constraint firstItem="6ul-yg-GTs" firstAttribute="centerY" secondItem="sLl-eS-mzV" secondAttribute="centerY" id="CXc-0z-hIS"/>
                                 <constraint firstItem="6ul-yg-GTs" firstAttribute="leading" secondItem="sLl-eS-mzV" secondAttribute="leading" constant="32" id="NgN-dc-gJ7"/>
-                                <constraint firstItem="6ul-yg-GTs" firstAttribute="top" secondItem="sLl-eS-mzV" secondAttribute="top" id="TiQ-Vn-LBt"/>
-                                <constraint firstItem="6ul-yg-GTs" firstAttribute="height" secondItem="sLl-eS-mzV" secondAttribute="height" id="fiV-QS-FBu"/>
+                                <constraint firstItem="6ul-yg-GTs" firstAttribute="top" secondItem="sLl-eS-mzV" secondAttribute="top" constant="16" id="TiQ-Vn-LBt"/>
+                                <constraint firstAttribute="height" constant="180" id="dDc-na-CqP"/>
                                 <constraint firstItem="6ul-yg-GTs" firstAttribute="centerX" secondItem="sLl-eS-mzV" secondAttribute="centerX" id="puI-uM-0Na"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
@@ -386,7 +387,6 @@
                         <constraint firstItem="zsd-Rq-haY" firstAttribute="top" secondItem="BRu-9r-gb8" secondAttribute="top" id="0Bo-HJ-a2w"/>
                         <constraint firstItem="zsd-Rq-haY" firstAttribute="bottom" secondItem="BRu-9r-gb8" secondAttribute="bottom" id="6cs-HI-phy"/>
                         <constraint firstItem="zsd-Rq-haY" firstAttribute="top" secondItem="rjw-fm-1aw" secondAttribute="top" id="B9W-k5-J5Z"/>
-                        <constraint firstItem="sLl-eS-mzV" firstAttribute="height" secondItem="rjw-fm-1aw" secondAttribute="height" multiplier="1/5" id="BPl-6s-A70"/>
                         <constraint firstItem="sLl-eS-mzV" firstAttribute="top" secondItem="Fqg-Pj-65H" secondAttribute="top" id="DQK-JE-M8N"/>
                         <constraint firstItem="zsd-Rq-haY" firstAttribute="bottom" secondItem="Fqg-Pj-65H" secondAttribute="bottom" id="KI2-m2-jO7"/>
                         <constraint firstItem="zsd-Rq-haY" firstAttribute="trailing" secondItem="BRu-9r-gb8" secondAttribute="trailing" id="NCU-Dc-3AF"/>
