--- a/Hosee/Hosee/Base.lproj/Home.storyboard
+++ b/Hosee/Hosee/Base.lproj/Home.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2aA-2i-l8A">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2aA-2i-l8A">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,16 +22,16 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="hHj-iM-7cp">
-                                <rect key="frame" x="16" y="32" width="288" height="108"/>
+                                <rect key="frame" x="16" y="32" width="288" height="88"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kta-27-Ysa" customClass="View" customModule="Hosee" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="288" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="40"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LUy-9v-TdI">
-                                                <rect key="frame" x="0.0" y="0.0" width="288" height="50"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="288" height="40"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🔵" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="acI-Nx-eu5">
-                                                        <rect key="frame" x="0.0" y="0.0" width="30" height="50"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="30" height="40"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="30" id="nvC-RZ-RGy"/>
@@ -41,13 +41,13 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qzi-7Y-j0k" customClass="InfinityLoopLabelView" customModule="Hosee" customModuleProvider="target">
-                                                        <rect key="frame" x="30" y="0.0" width="258" height="50"/>
+                                                        <rect key="frame" x="30" y="0.0" width="258" height="40"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </view>
                                                 </subviews>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fJP-yD-psA">
-                                                <rect key="frame" x="0.0" y="0.0" width="292" height="50"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="292" height="40"/>
                                                 <connections>
                                                     <action selector="onClickPlace:" destination="3kV-2B-oKj" eventType="touchUpInside" id="Jo9-Bu-GCc"/>
                                                 </connections>
@@ -62,7 +62,7 @@
                                             <constraint firstItem="LUy-9v-TdI" firstAttribute="leading" secondItem="kta-27-Ysa" secondAttribute="leading" id="Mfe-wf-Kmm"/>
                                             <constraint firstItem="fJP-yD-psA" firstAttribute="bottom" secondItem="LUy-9v-TdI" secondAttribute="bottom" id="Oey-SK-lSM"/>
                                             <constraint firstItem="LUy-9v-TdI" firstAttribute="top" secondItem="kta-27-Ysa" secondAttribute="top" id="d52-ql-EiM"/>
-                                            <constraint firstAttribute="height" constant="50" id="inW-xl-Aq4"/>
+                                            <constraint firstAttribute="height" constant="40" id="inW-xl-Aq4"/>
                                             <constraint firstItem="fJP-yD-psA" firstAttribute="leading" secondItem="LUy-9v-TdI" secondAttribute="leading" id="ogk-2M-ASK"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
@@ -78,13 +78,13 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gW3-jf-hyx" customClass="View" customModule="Hosee" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="58" width="288" height="50"/>
+                                        <rect key="frame" x="0.0" y="48" width="288" height="40"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3rA-bU-4Nz">
-                                                <rect key="frame" x="0.0" y="0.0" width="288" height="50"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="288" height="40"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j8R-79-rTQ" customClass="Button" customModule="Hosee" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="0.0" width="240" height="50"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="240" height="40"/>
                                                         <color key="backgroundColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <state key="normal" image="promotion">
                                                             <attributedString key="attributedTitle">
@@ -104,15 +104,14 @@
                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="rightBorder" value="NO"/>
                                                         </userDefinedRuntimeAttributes>
                                                         <connections>
-                                                            <action selector="onClickPromoteButton:" destination="3kV-2B-oKj" eventType="touchUpInside" id="9r2-Nf-4nv"/>
                                                             <segue destination="5Zj-Px-UtD" kind="show" id="91O-GQ-x5s"/>
                                                         </connections>
                                                     </button>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aIa-1r-Yhb">
-                                                        <rect key="frame" x="240" y="0.0" width="48" height="50"/>
+                                                        <rect key="frame" x="240" y="0.0" width="48" height="40"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow_right" translatesAutoresizingMaskIntoConstraints="NO" id="IRi-ey-mzF">
-                                                                <rect key="frame" x="12" y="13" width="24" height="24"/>
+                                                                <rect key="frame" x="12" y="8" width="24" height="24"/>
                                                                 <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             </imageView>
                                                         </subviews>
@@ -152,38 +151,43 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-street_view_filled" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pHK-Ba-AlF">
                                 <rect key="frame" x="147.5" y="227" width="25" height="25"/>
                             </imageView>
-                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XrF-Mn-Fzd" customClass="Button" customModule="Hosee" customModuleProvider="target">
-                                <rect key="frame" x="16" y="448" width="288" height="48"/>
-                                <color key="backgroundColor" red="0.16862745098039217" green="0.32941176470588235" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="ZLY-Rh-zBw"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
-                                <state key="normal" title="ĐẶT LỊCH">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="4"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="createOrder:" destination="3kV-2B-oKj" eventType="touchUpInside" id="cqW-Vh-tRD"/>
-                                    <segue destination="VKN-Xz-nqp" kind="presentation" identifier="showBooking" id="N2S-CQ-WuN"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="lBD-pS-LsD">
+                                <rect key="frame" x="16" y="456" width="288" height="40"/>
+                                <subviews>
+                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XrF-Mn-Fzd" customClass="Button" customModule="Hosee" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="40"/>
+                                        <color key="backgroundColor" red="0.16862745098039217" green="0.32941176470588235" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="ZLY-Rh-zBw"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                        <state key="normal" title="ĐẶT LỊCH">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="4"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="createOrder:" destination="3kV-2B-oKj" eventType="touchUpInside" id="cqW-Vh-tRD"/>
+                                            <segue destination="VKN-Xz-nqp" kind="presentation" identifier="showBooking" id="N2S-CQ-WuN"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="1Kp-m5-aXO" firstAttribute="leading" secondItem="0gt-Fn-PcI" secondAttribute="leading" id="69l-fh-cXN"/>
-                            <constraint firstItem="XrF-Mn-Fzd" firstAttribute="leading" secondItem="0gt-Fn-PcI" secondAttribute="leading" constant="16" id="Ayr-cf-hqb"/>
                             <constraint firstItem="hHj-iM-7cp" firstAttribute="leading" secondItem="0gt-Fn-PcI" secondAttribute="leading" constant="16" id="HTQ-7J-nvp"/>
                             <constraint firstAttribute="trailing" secondItem="hHj-iM-7cp" secondAttribute="trailing" constant="16" id="MIL-uE-Wam"/>
+                            <constraint firstItem="lBD-pS-LsD" firstAttribute="leading" secondItem="0gt-Fn-PcI" secondAttribute="leading" constant="16" id="MNJ-f7-rxb"/>
                             <constraint firstItem="0gt-Fn-PcI" firstAttribute="trailing" secondItem="1Kp-m5-aXO" secondAttribute="trailing" id="Ome-72-MvL"/>
-                            <constraint firstItem="0gt-Fn-PcI" firstAttribute="bottom" secondItem="XrF-Mn-Fzd" secondAttribute="bottom" constant="8" id="Q6Z-oN-k1T"/>
-                            <constraint firstItem="XrF-Mn-Fzd" firstAttribute="centerX" secondItem="iFK-gq-1FI" secondAttribute="centerX" id="ZyO-Yb-4od"/>
                             <constraint firstItem="1Kp-m5-aXO" firstAttribute="top" secondItem="0gt-Fn-PcI" secondAttribute="top" id="awe-Tw-FfY"/>
                             <constraint firstAttribute="bottom" secondItem="1Kp-m5-aXO" secondAttribute="bottom" id="dAY-u9-tf0"/>
+                            <constraint firstItem="0gt-Fn-PcI" firstAttribute="bottom" secondItem="lBD-pS-LsD" secondAttribute="bottom" constant="8" id="hlr-Os-RgV"/>
+                            <constraint firstItem="lBD-pS-LsD" firstAttribute="centerX" secondItem="iFK-gq-1FI" secondAttribute="centerX" id="r5Y-Nu-ZXz"/>
                             <constraint firstItem="pHK-Ba-AlF" firstAttribute="centerX" secondItem="iFK-gq-1FI" secondAttribute="centerX" id="sip-dZ-Au4"/>
                             <constraint firstItem="pHK-Ba-AlF" firstAttribute="bottom" secondItem="iFK-gq-1FI" secondAttribute="centerY" id="xX4-F7-Mgj"/>
                             <constraint firstItem="hHj-iM-7cp" firstAttribute="top" secondItem="0gt-Fn-PcI" secondAttribute="top" constant="32" id="xYf-jd-oZY"/>
@@ -269,6 +273,8 @@
                         <outlet property="addressContainerView" destination="kta-27-Ysa" id="ntR-H0-GeY"/>
                         <outlet property="addressLabel" destination="qzi-7Y-j0k" id="I6A-LF-Ubp"/>
                         <outlet property="mapView" destination="1Kp-m5-aXO" id="DXX-q6-hOZ"/>
+                        <outlet property="orderStackView" destination="lBD-pS-LsD" id="fh6-Zx-6sF"/>
+                        <outlet property="promoButton" destination="j8R-79-rTQ" id="uBd-ta-USq"/>
                         <outlet property="promoteBox" destination="3rA-bU-4Nz" id="j9v-fF-X4b"/>
                         <outlet property="selectedWorkingTypeContainerView" destination="ogh-Bt-eNT" id="4LJ-z2-378"/>
                         <outlet property="workingSelectionView" destination="rjw-fm-1aw" id="XUV-8Z-c6z"/>
